<resources>
    <string name="app_name">董伟专用微信</string>
    <string name="group_chat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan_code">扫一扫</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="message_count">微信(1)</string>
    <string name="weixin">微信</string>
    <string name="conatcts">通讯录</string>
    <string name="discover">发现</string>
    <string name="personal">我的</string>
    <string name="new_friend">新的朋友</string>
    <string name="group_chat1">群聊</string>
    <string name="label">标签</string>
    <string name="public_number">公众号</string>
    <string name="friend_circle">朋友圈</string>
    <string name="yaoyiyao">摇一摇</string>
    <string name="nearby_person">附近的人</string>
    <string name="floating_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="game">游戏</string>
    <string name="xiangce">相册</string>
    <string name="personal_name">donway</string>
    <string name="shoucang">收藏</string>
    <string name="wallet">钱包</string>
    <string name="kabao">卡包</string>
    <string name="biaoqing">表情</string>
    <string name="setting">设置</string>
</resources>
