<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:background="#dddddd"
    android:layout_height="match_parent">

    <!-- <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#111111"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="微信（1）"/>

        <ImageView
            android:id="@+id/bar_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bar_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bar_action"
            android:id="@+id/bar_action"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">



    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#dddddd" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/pengyouquan_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/pengyouquan"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_circle"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/pengyouquan_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#dddddd" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/saoyisao_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/saoyisao"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_code"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/saoyisao_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/yaoyiyao_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/yaoyiyao"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaoyiyao"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/yaoyiyao_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#dddddd" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/fujin_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/fujianderen"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby_person"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/fujin_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/piaoliuping_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/piaoliuping"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floating_bottle"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/piaoliuping_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>




    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#dddddd" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/gouwu_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/gouwu"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/gouwu_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/youxi_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/youxi"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/youxi_image"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    </LinearLayout>

</LinearLayout>