<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#dddddd"
    android:layout_height="match_parent">

   <!-- <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#111111"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="微信（1）"/>

        <ImageView
            android:id="@+id/bar_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bar_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bar_action"
            android:id="@+id/bar_action"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#dddddd" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="60dp">
            
            <ImageView
                android:id="@+id/person_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/personal_name"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/person_picture"
                android:gravity="center"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/person_erweima"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#dddddd" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/xiangce_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/xiangce"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiangce"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/xiangce_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#d9d9d9" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/shoucang_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/shoucang"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoucang"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/shoucang_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#dddddd" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/qianbao_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/qiaobao"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/qianbao_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#d9d9d9" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/kabao_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/kabao"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kabao"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/kabao_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#dddddd" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/biaoqing_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/biaoqing"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biaoqing"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/biaoqing_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#dddddd" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/shezhi_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/shezhi"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/shezhi_image"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>






    </LinearLayout>

</LinearLayout>