<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_gravity="fill_vertical"
    android:orientation="vertical"
    android:background="#d9d9d9"
    >

     <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="60dp"
     android:background="#111111"
     android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"
         android:text="@string/message_count"/>

     <ImageView
         android:id="@+id/bar_search"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:clickable="true"
         android:src="@drawable/search_bar_background"
         android:layout_marginRight="60dp"/>

     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/bar_action"
         android:id="@+id/bar_action"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_centerVertical="true"/>

 </RelativeLayout>
<!--<fragment
    android:id="@+id/fragment"
    android:name="com.example.wdong.myapplication.MainActivityFragment"
    tools:layout="@layout/fragment_main"
    android:layout_width="match_parent"
    android:layout_weight="0.2"
    android:layout_height="0dp" /> -->

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment1"
        android:layout_width="fill_parent"
        android:layout_weight="0.7"
        android:background="@color/accent_material_light"
        android:layout_height="0dp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#ffffff"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:id="@+id/button_weixin"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image_weixin"
                            android:layout_width="fill_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="0dp"
                            android:src="@drawable/alc"
                            android:layout_weight="0.6"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/text_weixin"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:text="@string/weixin"
                            android:layout_weight="0.4"
                            android:textSize="12sp"/>
    <!--    <Button
            android:id="@+id/weixin"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="微信"
            android:textSize="20sp"
            /> -->
                </LinearLayout>
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="10"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:id="@+id/button_friend"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
            <ImageView
                android:id="@+id/image_friend"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:src="@drawable/friend"
                android:layout_weight="0.6"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text_friend"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/conatcts"
                android:layout_weight="0.4"
                android:textSize="12sp"/>
    <!--    <Button
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:textSize="20sp"
            android:text="通讯录"
            /> -->
                </LinearLayout>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="2"/>
            </RelativeLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:id="@+id/button_discover"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
            <ImageView
                android:id="@+id/image_discover"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:src="@drawable/discover"
                android:layout_weight="0.6"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text_discover"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/discover"
                android:layout_weight="0.4"
                android:textSize="12sp"/>
    <!--    <Button
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:text="发现"
            android:textSize="20sp"
            /> -->
                </LinearLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/circle"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"/>
            </RelativeLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:id="@+id/button_mine"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
            <ImageView
                android:id="@+id/image_mine"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:src="@drawable/personal"
                android:layout_weight="0.6"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text_mine"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/personal"
                android:layout_weight="0.4"
                android:textSize="12sp"/>
     <!--   <Button
            android:id="@+id/mine"
            android:layout_width="wrap_content"
            android:layout_weight="0.25"
            android:layout_height="fill_parent"
            android:text="我我我"
            android:textSize="20sp"
            /> -->
                </LinearLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/circle"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"/>
            </RelativeLayout>
            </LinearLayout>

    </LinearLayout>
</LinearLayout>